fix(button): Added missing colour token for tertiary button (#79)
* fix: added missing colour token

* fix: active state colours fix for tertiary & secondary buttons

* fix: button focus state - all variants outline only

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -177,8 +177,16 @@ span {
   }
 
   &:focus {
-    border-width: 2px;
     border-color: var(--kd-color-border-button-primary-state-focused);
+    box-shadow: inset 0 0 0 1px
+        var(--kd-color-border-button-primary-state-focused),
+      inset 0 0 0 1px var(--kd-color-border-button-primary-state-focused);
+    &:active {
+      border-color: var(--kd-color-border-button-primary-state-pressed);
+      box-shadow: inset 0 0 0 0.5px
+          var(--kd-color-border-button-primary-state-pressed),
+        inset 0 0 0 0.5px var(--kd-color-border-button-primary-state-pressed);
+    }
   }
 
   &:disabled {
@@ -279,13 +287,15 @@ span {
     background-color: var(--kd-color-background-button-secondary-state-hover);
   }
 
-  &:active {
-    background-color: var(--kd-color-background-button-secondary-state-pressed);
-  }
-
   &:focus {
     background-color: var(--kd-color-background-button-secondary-state-focused);
     outline-color: var(--kd-color-border-button-secondary-state-focused);
+
+    &:active {
+      background-color: var(
+        --kd-color-background-button-secondary-state-pressed
+      );
+    }
   }
 
   &:disabled {
@@ -305,13 +315,18 @@ span {
     border-color: var(--kd-color-border-button-secondary-state-hover);
   }
 
-  &:active {
-    border-color: var(--kd-color-border-button-secondary-state-pressed);
-  }
-
   &:focus {
-    border-width: 2px;
     border-color: var(--kd-color-border-button-secondary-state-focused);
+    box-shadow: inset 0 0 0 1px
+        var(--kd-color-border-button-secondary-state-focused),
+      inset 0 0 0 1px var(--kd-color-border-button-secondary-state-focused);
+
+    &:active {
+      border-color: var(--kd-color-border-button-secondary-state-pressed);
+      box-shadow: inset 0 0 0 0.5px
+          var(--kd-color-border-button-secondary-state-pressed),
+        inset 0 0 0 0.5px var(--kd-color-border-button-secondary-state-pressed);
+    }
   }
 
   &:disabled {
@@ -331,22 +346,19 @@ span {
     background-color: var(
       --kd-color-background-button-secondary-destructive-hover
     );
-    color: var(--kd-color-text-button-dark-destructive);
-  }
-
-  &:active {
-    background-color: var(
-      --kd-color-background-button-secondary-destructive-pressed
-    );
-    color: var(--kd-color-text-button-dark-destructive);
   }
 
   &:focus {
     background-color: var(
       --kd-color-background-button-secondary-destructive-focused
     );
-    color: var(--kd-color-text-button-dark-destructive);
     outline-color: var(--kd-color-border-button-primary-destructive-default);
+
+    &:active {
+      background-color: var(
+        --kd-color-background-button-secondary-destructive-pressed
+      );
+    }
   }
 }
 
@@ -361,13 +373,13 @@ span {
     border-color: var(--kd-color-border-button-secondary-destructive-hover);
   }
 
-  &:active {
-    border-color: var(--kd-color-border-button-secondary-destructive-pressed);
-  }
-
   &:focus {
     border-color: var(--kd-color-border-button-secondary-destructive-focused);
     outline-color: var(--kd-color-border-button-primary-destructive-default);
+
+    &:active {
+      border-color: var(--kd-color-border-button-secondary-destructive-pressed);
+    }
   }
 
   &:disabled {
@@ -382,21 +394,23 @@ span {
   background-color: var(--kd-color-background-button-tertiary-state-default);
   color: var(--kd-color-text-button-light-primary);
   border: none;
-  min-width: initial;
 
   &:hover {
     background-color: var(--kd-color-background-button-tertiary-state-hover);
     color: var(--kd-color-text-button-dark-primary);
   }
 
-  &:active {
-    background-color: var(--kd-color-background-button-tertiary-state-pressed);
-    color: var(--kd-color-text-button-dark-primary);
-  }
-
   &:focus {
     background-color: var(--kd-color-background-button-tertiary-state-focused);
     outline-color: var(--kd-color-border-button-tertiary-state-focused);
+    color: var(--kd-color-text-button-light-primary);
+
+    &:active {
+      background-color: var(
+        --kd-color-background-button-tertiary-state-pressed
+      );
+      color: var(--kd-color-text-button-dark-primary);
+    }
   }
 
   &:disabled {
@@ -416,13 +430,18 @@ span {
     border-color: var(--kd-color-border-button-tertiary-state-hover);
   }
 
-  &:active {
-    border-color: var(--kd-color-border-button-tertiary-state-pressed);
-  }
-
   &:focus {
-    border-width: 2px;
     border-color: var(--kd-color-border-button-tertiary-state-focused);
+    box-shadow: inset 0 0 0 1px
+        var(--kd-color-border-button-tertiary-state-focused),
+      inset 0 0 0 1px var(--kd-color-border-button-tertiary-state-focused);
+
+    &:active {
+      border-color: var(--kd-color-border-button-tertiary-state-pressed);
+      box-shadow: inset 0 0 0 0.5px
+          var(--kd-color-border-button-tertiary-state-pressed),
+        inset 0 0 0 0.5px var(--kd-color-border-button-tertiary-state-pressed);
+    }
   }
 
   &:disabled {
@@ -444,19 +463,19 @@ span {
     );
   }
 
-  &:active {
-    background-color: var(
-      --kd-color-background-button-tertiary-destructive-pressed
-    );
-    color: var(--kd-color-text-button-dark-destructive);
-  }
-
   &:focus {
     background-color: var(
       --kd-color-background-button-tertiary-destructive-focused
     );
     color: var(--kd-color-text-button-dark-destructive);
     outline-color: var(--kd-color-border-button-primary-destructive-default);
+
+    &:active {
+      background-color: var(
+        --kd-color-background-button-tertiary-destructive-pressed
+      );
+      color: var(--kd-color-text-button-dark-destructive);
+    }
   }
 
   &:disabled {
@@ -476,13 +495,13 @@ span {
     border-color: var(--kd-color-border-button-tertiary-destructive-hover);
   }
 
-  &:active {
-    border-color: var(--kd-color-border-button-tertiary-destructive-pressed);
-  }
-
   &:focus {
     border-color: var(--kd-color-border-button-tertiary-destructive-focused);
     outline-color: var(--kd-color-border-button-primary-destructive-focused);
+
+    &:active {
+      border-color: var(--kd-color-border-button-tertiary-destructive-pressed);
+    }
   }
 
   &:disabled {
